[tool.poetry]
name = "meteor"
version = "0.1.0"
description = "ETo package"
authors = ["João Fauvel <jmmfauvel@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
